Created data folder

--- a/scripts/rhody.ipynb
+++ b/scripts/rhody.ipynb
@@ -39,7 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.signal as sig\n",
     "# Columns are datetime, upper temperature, lower temperature, heater temperature\n",
-    "frame = pd.read_csv('tree4_log.csv', usecols=[1,2,3])\n",
+    "frame = pd.read_csv('../data/tree4_log.csv', usecols=[1,2,3])\n",
     "# Since we're not actually using the date, we won't bother parsing it.\n",
     "print(frame)\n",
     "len = 152 #Each pulse is 152 samples long\n",
